# programmer-dvorak-tutor

./: .gitignore  Cargo.toml  LICENSE  README.md  cli.yml
lessons/: lesson-02.txt  lesson-05b.txt  lesson-07a.txt  lesson-09c.txt  lesson-11b.txt  lesson-12.txt  lesson-15a.txt  lesson-15c.txt  lesson-15d.txt  lesson-16.txt  lesson-17a.txt  lesson-19c.txt  lesson-21c.txt  lesson-23b.txt  lesson-25a.txt  lesson-25c.txt  lesson-26.txt  lesson-28.txt  lesson-29a.txt  lesson-29b.txt  lesson-29c.txt  lesson-31b.txt  lesson-33a.txt  lesson-34.txt  lesson-36.txt  lesson-37b.txt  lesson-38.txt  lesson-39a.txt  lesson-39b.txt  lesson-40.txt  lesson-44.txt  lesson-45.txt  lesson-47b.txt  lesson-51.txt  lesson-52b.txt  lesson-53.txt  lesson-58a.txt  lesson-58b.txt  lesson-59.txt  lesson-60a.txt  (+61 more)
src/: lib.rs  oldlib.rs
src/io/: lesson.rs  mod.rs  stats.rs
