[package]
name = "programmer-dvorak-tutor"
version = "0.1.0"
authors = ["Claire Meyer <signedrewind@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "programmer_dvorak_tutor"
path = "src/lib.rs"

[[bin]]
name = "programmer_dvorak_tutor_cli"
path = "src/bin/main.rs"

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
termion = "1.5.3"
colored = "1.8.0"
walkdir = "2.2.9"
lazy_static = "1.4.0"
serde_json = "1.0.41"
serde = { version = "1.0", features = ["derive"] }
